<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 zhangls2014
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <!-- App Name -->
    <string name="app_name">Weibo</string>

    <!-- Activity Name -->
    <string name="activity_login">Login</string>
    <string name="activity_home">Home</string>
    <string name="activity_search">Search</string>
    <string name="activity_user">User</string>
    <string name="activity_repost">Repost</string>
    <string name="activity_reply">Reply</string>
    <string name="activity_comment">Comment</string>
    <string name="activity_detail">Weibo Content</string>

    <!-- Action Name -->
    <string name="action_menu_finish">Close</string>
    <string name="action_menu_settings">Settings</string>
    <string name="action_home_menu_add_friend">Add Friend</string>
    <string name="action_home_menu_scan">Scan</string>
    <string name="action_home_menu_radar">Radar</string>
    <string name="action_home_menu_uber">Uber</string>
    <string name="action_home_menu_search">Search</string>

    <!-- Item Name -->
    <string name="ac_login_sso_login_text">微博授权登录</string>

    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_token_info">Token 信息：</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>

    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>

    <string name="weibo_login">微博登陆</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="user_title_home">Home</string>
    <string name="user_title_weibo">Weibo</string>
    <string name="user_title_album">Album</string>

    <!-- Profile 列表单元 -->
    <string name="profile_info_weibo">Weibo</string>
    <string name="profile_info_attention">Attention</string>
    <string name="profile_info_fans">Fans</string>
    <string name="profile_info_attitude">Attitude</string>
    <string name="profile_info_album">Album</string>
    <string name="profile_info_article">Article</string>
    <string name="profile_info_collection">Collection</string>
    <string name="profile_info_setting">Setting</string>

    <!-- HomeActivity BottomNavigation Name -->
    <string name="activity_home_home">Home</string>
    <string name="activity_home_message">Message</string>
    <string name="activity_home_discover">Discover</string>

    <!-- 默认好友分组列表 -->
    <string name="spinner_group_name_homepage">Homepage</string>
    <string name="spinner_group_name_friends_circle">Friends Circle</string>
    <string name="spinner_group_name_group_weibo">Group Weibo</string>
    <string name="spinner_group_name_tebieguanxin">特别关心</string>
    <string name="spinner_group_name_qiaoqiaoguanzhu">悄悄关注</string>
    <string name="spinner_group_name_nearby">Nearby</string>
    <string name="action_search_menu_voice">Voice</string>
    <string name="action_search_menu_location">Location</string>
    <string name="action_search_menu_all">All</string>
    <string name="action_search_menu_weibo">Weibo</string>
    <string name="action_search_menu_people">People</string>
    <string name="weibo_pic_transition_name" translatable="false">weibo_pic_transition_name</string>
    <string name="weibo_pic_description">weibo picture content description</string>

    <string name="ac_repost_menu_send">Send</string>
    <string name="ac_edit_edit_text_repost_hint">Share your feelings…</string>
    <string name="ac_edit_edit_text_reply_hint">Reply</string>
    <string name="ac_edit_edit_text_comment_hint">Write a comment…</string>
    <string name="ac_edit_comment">Also comment</string>
    <string name="ac_edit_repost">Also repost</string>
    <string name="ac_repost_weibo_visible_public">Public</string>

    <string name="fg_comment_repost">Repost</string>
    <string name="fg_comment_reply">Reply</string>
    <string name="fg_comment_copy">Copy</string>

    <string name="weibo_container_repost">Repost</string>
    <string name="weibo_container_comment">Comment</string>
    <string name="weibo_container_likes">Likes</string>
    <string name="weibo_container_source">"From "</string>
    <string name="weibo_container_create_time_just_now">Just now</string>
    <string name="weibo_container_create_time_mins_ago">" mins ago"</string>
    <string name="weibo_container_create_time_hours_ago">" hours ago"</string>
    <string name="weibo_container_create_time_yesterday">"Yesterday "</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_ac_home_drawer_settings">Setting</string>
    <string name="menu_ac_comment_share">Share</string>
    <string name="menu_ac_comment_favorite">Favorite</string>
    <string name="menu_ac_comment_promote">Promote</string>
    <string name="menu_ac_comment_copy_url">Copy URL</string>
    <string name="menu_ac_comment_report">Report</string>
    <string name="menu_ac_comment_go_home">Go Home</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="menu_ac_msg_all_weibo">All Weibo</string>
    <string name="menu_ac_msg_following_weibo">Following\' Weibo</string>
    <string name="menu_ac_msg_original_weibo">Original Weibos</string>
    <string name="menu_ac_msg_all_comment">All Comments</string>
    <string name="menu_ac_msg_following_comment">Following\' Comments</string>
    <string name="item_comment_card_reply_btn">Reply</string>
    <string name="menu_ac_msg_comment_all_comment">All Comments</string>
    <string name="menu_ac_msg_comment_following_comment">Following\'Comments</string>
    <string name="menu_ac_msg_comment_mine">Mine</string>
    <string name="activity_message_mention">Mention</string>
    <string name="activity_message_comment">Comment</string>
    <string name="menu_ac_home_drawer_favorites">Favorites</string>
    <string name="activity_favorite">Favorite</string>
    <string name="menu_ac_home_drawer_friend">Friend Weibo</string>
    <string name="menu_ac_home_drawer_user">User Weibo</string>

    <string name="com_sina_weibo_sdk_login_with_weibo_account">Login with Weibo</string>
    <string name="com_sina_weibo_sdk_login">Login</string>
    <string name="com_sina_weibo_sdk_logout">Logout</string>
    <string name="menu_ac_comment_open_in_weibo">Open In Weibo</string>

    <string name="fragment_find_actv_hot_trend">Hot Trends</string>
    <string name="fragment_find_actv_hot_user">Hot User</string>
    <string name="fragment_find_actv_hot_favorite">Hot Favorites</string>
    <string name="fragment_find_tab_title_hot_favorites">Hot Favorites</string>
    <string name="fragment_find_tab_title_public_weibo">Hot Weibo</string>
    <string name="activity_edit_update">Send Weibo</string>
    <string name="menu_ac_search_open_in_weibo">Open in Weibo</string>

    <string
        name="content_home_floating_action_button_scrolling_behavior"
        translatable="false">cn.zhangls.android.weibo.animation.FloatActionBtnBehavior</string>
    <string
        name="content_home_bottom_nav_bar_scrolling_behavior"
        translatable="false">cn.zhangls.android.weibo.animation.BottomNavBarBehavior</string>
    <string name="item_easy_recycler_view_empty">No more data</string>
    <string name="item_easy_recycler_view_error">A network error occurs, please tap the text to reload</string>
    <string name="item_easy_recycler_view_load_more">loading…</string>
    <string name="activity_user_friends_count"> Following</string>
    <string name="activity_user_followers_count"> Followers</string>
    <string name="activity_user_description">Profile: </string>
    <string name="activity_user_statuses_count"> Weibo</string>
    <string name="menu_item_weibo_more_follow">Follow</string>
    <string name="menu_item_weibo_more_save_post">Save Post</string>
    <string name="menu_item_weibo_more_unfollow">Unfollow</string>
    <string name="menu_item_weibo_more_unsave_post">Unsave Post</string>
    <string name="weibo_card_transition_name" translatable="false">weibo_card</string>
</resources>
