<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 zhangls2014
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_ac_comment_share"
        android:title="@string/menu_ac_comment_share"
        android:icon="@drawable/avd_share"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />

    <group app:showAsAction="never">
        <item
            android:id="@+id/menu_ac_comment_open_in_weibo"
            android:title="@string/menu_ac_comment_open_in_weibo"
            android:icon="@drawable/menu_ac_comment_collection"
            android:orderInCategory="2"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_ac_comment_favorite"
            android:title="@string/menu_ac_comment_favorite"
            android:icon="@drawable/menu_ac_comment_collection"
            android:orderInCategory="2"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_ac_comment_promote"
            android:title="@string/menu_ac_comment_promote"
            android:icon="@drawable/menu_ac_comment_top_line"
            android:orderInCategory="3"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_ac_comment_copy_url"
            android:title="@string/menu_ac_comment_copy_url"
            android:icon="@drawable/menu_ac_comment_link"
            android:orderInCategory="4"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_ac_comment_report"
            android:title="@string/menu_ac_comment_report"
            android:icon="@drawable/menu_ac_comment_report"
            android:orderInCategory="5"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_ac_comment_go_home"
            android:title="@string/menu_ac_comment_go_home"
            android:icon="@drawable/menu_ac_comment_back"
            android:orderInCategory="6"
            app:showAsAction="never"
            />
    </group>
</menu>