<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 zhangls2014
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_ac_msg_all_weibo"
            android:title="@string/menu_ac_msg_all_weibo"
            android:checked="true"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_ac_msg_following_weibo"
            android:title="@string/menu_ac_msg_following_weibo"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_ac_msg_original_weibo"
            android:title="@string/menu_ac_msg_original_weibo"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_ac_msg_all_comment"
            android:title="@string/menu_ac_msg_all_comment"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_ac_msg_following_comment"
            android:title="@string/menu_ac_msg_following_comment"
            app:showAsAction="never"
            />
    </group>

</menu>